[project]
name = "myPyllant"
authors = [
  { name="Philipp", email="pd@signalkraft.com" },
]
description = "A Python library to interact with the API behind the myVAILLANT app"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp>=3.8.0",
  "pydantic>=1.10.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/signalkraft/myPyllant"
"Bug Tracker" = "https://github.com/signalkraft/myPyllant/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = "--cov=src"
asyncio_mode = "auto"
testpaths = [
    "src/myPyllant/tests",
]

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.mypy]
python_version = "3.10"
pretty = true
follow_imports = "silent"
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
# splits long import on multiple lines indented by 4 spaces
profile = "black"

[tool.flake8]
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore = ["E501", "W503", "E203", "D202", "W504"]