[project]
name = "myPyllant"
authors = [
    { name = "Philipp", email = "pd@signalkraft.com" },
]
description = "A Python library to interact with the API behind the myVAILLANT app"
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.10,<3.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]

test = [
    "aioresponses~=0.7.7",
    "pytest>=8.3.0",
    "aiohttp>=3.8.0",
    "pytest-aiohttp~=1.0.5",
    "pytest-asyncio~=0.24.0",
    "pytest-cov~=5.0.0",
    "pytest-mock~=3.14.0",
    "pytest-xdist>=3.3.0",
    "build~=1.2.1",
    "freezegun~=1.5.1",
    "country_list~=1.1.0",
    "requests~=2.31.0",
    "pydantic>=2.10,<3.0",
]

lint = [
    "pre-commit~=4.0.1",
    "mypy~=1.13.0",
    "types-requests~=2.32.0.20240712",
    "types-PyYAML~=6.0.12.20240917",
]

[project.urls]
"Homepage" = "https://github.com/signalkraft/myPyllant"
"Bug Tracker" = "https://github.com/signalkraft/myPyllant/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
addopts = "-n4 --cov=src"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "src/myPyllant/tests",
]
filterwarnings = ["ignore:Inheritance class CountingClientSession from ClientSession is discouraged:DeprecationWarning"]

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.mypy]
python_version = "3.13"
pretty = true
follow_imports = "silent"
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.ruff.lint.pycodestyle]
max-line-length = 80
